TestiSivu.xalm +.cs luonti
Tein testisivun testausta/kikkailua varten

--- a/HulluKyla/Pages/MainPage.xaml
+++ b/HulluKyla/Pages/MainPage.xaml
@@ -5,7 +5,7 @@
 
     <ScrollView>
         <VerticalStackLayout>
-            
+            <Button Text="TestiSivu" Clicked="TestiSivuClicked" />
         </VerticalStackLayout>
     </ScrollView>
 
