--- a/HulluKyla/AppShell.xaml
+++ b/HulluKyla/AppShell.xaml
@@ -4,6 +4,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:HulluKyla"
+    xmlns:pages="clr-namespace:HulluKyla.Pages"
     Shell.FlyoutBehavior="Flyout"
     Title="HulluKyla">
 
