--- a/HulluKyla/Pages/PalveluListaPage.xaml
+++ b/HulluKyla/Pages/PalveluListaPage.xaml
@@ -9,7 +9,7 @@
           RowDefinitions="0.8*,0.2*"
           ColumnDefinitions="0.4*,0.20*,0.4*">
 
-        <!-- Palvelulistan placeholder -->
+        <!-- Palvelulista -->
         <Grid RowDefinitions="0.1*,0.9*" Grid.Row="0" Grid.Column="0" >
             <Picker x:Name="AluePicker"
                     Grid.Row="0"
@@ -38,13 +38,15 @@
         
             
 
-        <!-- Palvelulistan placeholder -->
+        <!-- Välibuttonit -->
 
         <VerticalStackLayout Spacing="10" Grid.Column="1" Grid.Row="0" VerticalOptions="Center" HorizontalOptions="Center">
             <Button Text="Tallenna palvelu" Clicked="TallennaClicked" HeightRequest="50" />
             <Button Text="Poista palvelu" Clicked="PoistaClicked" HeightRequest="50" />
         </VerticalStackLayout>
 
+        <!-- Entryt -->
+        
         <VerticalStackLayout Spacing="10" Grid.Column="2" Grid.Row="0" VerticalOptions="Center" HorizontalOptions="Fill">
             <Entry x:Name="NimiEntry" Placeholder="Palvelun nimi..." />
             <Entry x:Name="KuvausEntry" Placeholder="Palvelun kuvaus..." HeightRequest="100" />
