--- a/HulluKyla/Pages/UusiAluePage.xaml
+++ b/HulluKyla/Pages/UusiAluePage.xaml
@@ -6,25 +6,19 @@
 
 
     <Grid Padding="20"
-          RowDefinitions="*,Auto"
-          ColumnDefinitions="*,*">
+          RowDefinitions="0.8*,0.2*"
+          ColumnDefinitions="0.3*,0.4*,0.3*">
 
-        <!-- Placeholder keskelle -->
-        <Frame Grid.Row="0" Grid.ColumnSpan="2"
-               BorderColor="Gray"
-               BackgroundColor="#f0f0f0"
-               Padding="20"
-               CornerRadius="10"
-               HeightRequest="300"
-               WidthRequest="320"
-               HorizontalOptions="Center"
-               VerticalOptions="Center">
-            <Label Text="Tähän tulee Alueclassin entryt"
-                   FontSize="16"
-                   TextColor="Gray"
-                   HorizontalOptions="Center"
-                   VerticalOptions="Center"/>
-        </Frame>
+        <!-- Uuden palvelun entryt -->
+        <StackLayout Grid.Row="0"
+             Grid.Column="1"
+             HorizontalOptions="Fill"
+             VerticalOptions="Center" 
+             Spacing="10" >
+            
+            <Entry x:Name="NimiEntry" Placeholder="Alueen nimi..." />
+            
+        </StackLayout>
 
         <!-- Vasemman reunan napit -->
         <StackLayout Grid.Row="1" Grid.Column="0"
@@ -44,9 +38,9 @@
         </StackLayout>
 
         <!-- Oikean reunan tallenna-nappi -->
-        <Button Grid.Row="1" Grid.Column="1"
-                Text="Tallenna"
-                Clicked="Tallenna_Clicked"
+        <Button Grid.Row="1" Grid.Column="2"
+                Text="Lisää"
+                Clicked="LisaaClicked"
                 HorizontalOptions="End"
                 VerticalOptions="End"
                 Margin="0,20,0,0" />
